# n-queens-solver

./: .gitignore  README.md  dune-project
lib/: dune
test/: dune  nqueens.ml
